# fastapi_bulletin_board

./: .gitignore  database.py  main.py  pyproject.toml
domain/answer/: answer_crud.py  answer_router.py  answer_schema.py
domain/question/: question_crud.py  question_router.py  question_schema.py
domain/user/: user_router.py  user_schema.py
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/components/: Navigation.svelte
frontend/src/routes/: Detail.svelte  Home.svelte  UserCreate.svelte
